--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Niluma Embalagens</title>
 </head>
 <body>
+<center>
 <a href="mailto:comercialniluma@gmail.com"><img src="niluma.jpg" class="media-object img-responsive img-thumbnail"></a>
+</center>
 </body>
 </html>
